Imperium Scorpio V 0.07 -implementation button DRAW -fix Hardcoded string (WAIT,DRAW) -new class MatchModel.kt (ViewMode)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Imperium_Scorpio</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="wait">WAIT</string>
+    <string name="draw">DRAW</string>
 </resources>
