--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="wait">WAIT</string>
     <string name="draw">DRAW</string>
+    <string name="PlayerName">Name</string>
 </resources>
